@@ -16,14 +16,14 @@
 
 package org.gradle.performance
 
-import org.gradle.performance.categories.JavaPerformanceTest
+import org.gradle.performance.categories.Experiment
 import org.junit.experimental.categories.Category
 import spock.lang.Unroll
 
 import static org.gradle.performance.measure.DataAmount.mbytes
 import static org.gradle.performance.measure.Duration.millis
 
-@Category([JavaPerformanceTest])
+@Category([Experiment])
 class JavaUpToDateFullAssembleDaemonPerformanceTest extends AbstractCrossVersionPerformanceTest {
     @Unroll("Up-to-date assemble Java software model build - #testProject")
     def "up-to-date assemble Java software model build"() {
@@ -35,7 +35,7 @@ class JavaUpToDateFullAssembleDaemonPerformanceTest extends AbstractCrossVersion
         runner.maxMemoryRegression = maxMemoryRegression
         runner.targetVersions = ['2.10', '2.11', 'last']
         runner.useDaemon = true
-        runner.gradleOpts = ["-Xms2g", "-Xmx2g", "-XX:MaxPermSize=256m"]
+        runner.gradleOpts = ["-Xms2g", "-Xmx2g"]
 
         when:
         def result = runner.run()
@@ -64,7 +64,7 @@ class JavaUpToDateFullAssembleDaemonPerformanceTest extends AbstractCrossVersion
         runner.maxMemoryRegression = maxMemoryRegression
         runner.targetVersions = ['2.10', '2.11', 'last']
         runner.useDaemon = true
-        runner.gradleOpts = ["-Xms2g", "-Xmx2g", "-XX:MaxPermSize=256m"]
+        runner.gradleOpts = ["-Xms2g", "-Xmx2g"]
         runner.args += ["--parallel", "--max-workers=4"]
 
         when:
